--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
 						<h1><a href="index.html">Sophia Winters</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#">Info</a></li>
-								<li><a href="#">TToZD</a></li>
-								<li><a href="#">Feugiat</a></li>
-								<li><a href="#">Tempus</a></li>
-								<li><a href="#">Adipiscing</a></li>
+								<li><a href="1">Info</a></li>
+								<li><a href="2">TToZD</a></li>
+								<li><a href="3">Iylias</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
@@ -57,19 +55,19 @@
 							<section>
 								<ul class="links">
 									<li>
-										<a href="#">
-											<h3>Lorem ipsum</h3>
-											<p>Feugiat tempus veroeros dolor</p>
+										<a href="1">
+											<h3>Info</h3>
+											<p>Sophia Alexandra Winters is an aspiring author and worldbuilder from Portugal. She started writing Iylias, her first worldbuilding project, in late 2022 and is now focused on her second project, Vaiza, and its foundational work, "The Tale of Zethea's Daughters"</p>
 										</a>
 									</li>
 									<li>
-										<a href="#">
+										<a href="2">
 											<h3>Dolor sit amet</h3>
 											<p>Sed vitae justo condimentum</p>
 										</a>
 									</li>
 									<li>
-										<a href="#">
+										<a href="3">
 											<h3>Feugiat veroeros</h3>
 											<p>Phasellus sed ultricies mi congue</p>
 										</a>
@@ -639,4 +637,5 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
