--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Sophia Winters</a></h1>
+						<h1>Sophia Winters</h1>
 						<nav class="links">
 							<ul>
 								<li><a href="#1">Info</a></li>
@@ -62,8 +62,8 @@
 									</li>
 									<li>
 										<a href="#2">
-											<h3>Dolor sit amet</h3>
-											<p>Sed vitae justo condimentum</p>
+											<h3>TToZD</h3>
+											<p>"The Tale of Zethea's Daughters, or TToZD for short, is the foundational work for Vaiza.</p>
 										</a>
 									</li>
 									<li>
@@ -637,6 +637,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
